--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@2alheure/vue-modal",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A simple Modal component for Vue.js.",
   "main": "src/Modal.vue",
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "keywords": [
     "Vue.js",
+    "Vue 3",
     "modal",
     "window",
     "pop-up"
